<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SafeStep</string>
    <string name="logo_description">Logo de SafeStep</string>
    <string name="login_string">Inicio de sesión</string>
    <string name="email_field">Correo electrónico</string>
    <string name="password_field">Contraseña</string>
    <string name="reset_password">Olvidé la contraseña</string>
    <string name="sign_up_string">Registrarme</string>
    <string name="sign_up_title">Registrarse</string>
    <string name="full_name_field">Nombre completo</string>
    <string name="verify_password">Confirmar contraseña</string>
    <string name="ask_have_account">¿Tienes una cuenta?</string>
    <string name="login_imperative">Inicia sesión</string>
    <string name="string_target">Terminos, Condiciones</string>
    <string name="terms_conditions">Acepto los Términos, Condiciones y el Aviso de Privacidad.</string>
    <string name="profile_image">Foto de perfil</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>
    <string name="no_verified_email">Correo no verificado</string>
    <string name="ask_send_new_email">¿Desea mandar un nuevo correo de verificacion?</string>
    <string name="send">Enviar</string>
    <string name="email_sent">Correo de verificacion enviado</string>
    <string name="cancel">Cancelar</string>
    <string name="invalid_credentials">Credenciales no validas</string>
    <string name="required_field">El campo es obligatorio</string>
    <string name="invalid_email">Correo invalido</string>
    <string name="error">Error</string>
    <string name="sign_up_failed">La cuenta no pudo ser creada</string>
    <string name="got_it">Entendido</string>
    <string name="instructions_verify_email">Una vez verifique su correo podra iniciar sesion. Si el correo no se encuentra revise su bandeja de correo no deseado.</string>
    <string name="accept_terms_conditions">Acepte los terminos y condiciones</string>
    <string name="invalid_name">Ingrese un nombre valido</string>
    <string name="password_length">Debe contener al menos 6 caracteres</string>
    <string name="passwords_not_match">Las contraseñas no coinciden</string>
    <string name="confirmation">Confirmación</string>
    <string name="error_operation">Hubo un error en la operación</string>
    <string name="reports_title">Reportes</string>
    <string name="log_out_title">Cerrar sesión</string>
    <string name="app_name_br">Safe Step</string>
    <string name="reset_password_title">Restablecer Contraseña</string>
    <string name="send_email">Enviar Correo</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiaW5nZ3VlcnJlcm8iLCJhIjoiY2toM251bTV2MTBxNDJ5cngybHo5eHRseCJ9.ckhpgcLjhsjuPePLq4Y9vQ</string>
    <string name="search_field">Buscar</string>
    <string name="crime_register_title">Reportar crimen</string>
    <string name="crimeTitle">Título</string>
    <string name="what_happened">¿Que sucedio?</string>
    <string name="what_was_the_crime">¿Cual fue el crimen?</string>
    <string name="whenItHappened">¿Cuando sucedió?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="map">Mapa</string>
    <string name="last_reports_title">Ultimos reportes</string>
    <string name="my_reports_title">Mis reportes</string>
    <string name="title_activity_report_detailed" translatable="false">ReportDetailedActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world" translatable="false">Hello Square World!</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
</resources>