<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:paddingTop="40dp"
        android:layout_marginTop="60dp"
        android:paddingBottom="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/logo"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"/>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/tivEmailResetPassword"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="16dp"
        android:hint="@string/email_field"
        app:errorEnabled="true"
        android:layout_gravity="center_horizontal"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        app:helperText="Se le enviara un correo para restablecer la contraseña">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailResetPassword"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:layout_marginBottom="15dp"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmitRestablecer"
        style="@style/Widget.MaterialComponents.Button.BigButton.Primary"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send_email" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="56dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>