<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">


    <TextView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tivFullName"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="16dp"
        android:hint="@string/full_name_field"
        app:errorEnabled="true"
        android:layout_gravity="center_horizontal"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            android:shadowColor="@color/colorPrimaryDark" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tivEmailSignUp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="16dp"
        android:hint="@string/email_field"
        app:errorEnabled="true"
        android:layout_gravity="center_horizontal"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:shadowColor="@color/colorPrimaryDark" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tivPasswordSignUp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="16dp"
        android:hint="@string/password_field"
        app:errorEnabled="true"
        android:layout_gravity="center_horizontal"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tivConfirmPassword"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="16dp"
        android:hint="@string/verify_password"
        app:errorEnabled="true"
        android:layout_gravity="center_horizontal"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorAccent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbTermsAndConditions"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/colorPrimaryDark"
        android:focusableInTouchMode="true"/>

    <TextView
        android:id="@+id/tvTermsConditions"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingStart="24dp"
        tools:ignore="RtlSymmetry" />


    <Space
        android:layout_width="330dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmitSignUp"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.BigButton.Primary"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_up_title" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_have_account"
            android:textStyle="bold"
            android:layout_marginEnd="2dp"/>

        <Button
            android:id="@+id/btnGotoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton.Normalize"
            android:text="@string/login_imperative"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginStart="2dp" />
    </LinearLayout>



</LinearLayout>