<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".fragments.CrimeFormFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbarRegisterFragment"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/crime_register_title" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="10dp"
                    >

                    <ImageView
                        android:id="@+id/ivMainImage"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/ic_baseline_image_24" />

                    <ImageView
                        android:id="@+id/ivSecondImage"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/ic_baseline_image_24" />

                    <ImageView
                        android:id="@+id/ivThirdImage"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/ic_baseline_image_24" />

                </LinearLayout>

            </HorizontalScrollView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCrimeTitle"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Primary"
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:hint="@string/crimeTitle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCrimeTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCrime"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/what_was_the_crime">

                        <AutoCompleteTextView
                            android:id="@+id/filled_exposed_dropdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilDatePicker"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Primary"
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/whenItHappened"
                        android:layout_marginTop="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDatePicker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:singleLine="true"
                            android:focusable="false"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCrimeDescription"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.Primary"
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="@string/what_happened">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCrimeDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top"
                            android:imeOptions="actionNext"
                            android:inputType="textMultiLine"
                            android:minHeight="150dp"
                            android:singleLine="false" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCancelCrime"
                        style="@style/Widget.MaterialComponents.Button.BigButton.Secondary"
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:textSize="17sp"
                        android:text="@string/cancel"
                        android:textStyle="normal" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSubmitCrime"
                        style="@style/Widget.MaterialComponents.Button.BigButton.Primary"
                        android:layout_width="330dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="17sp"
                        android:text="@string/send" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlLoadingCrimeRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:background="@color/colorSecondaryDark" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>